# RAG-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start_backend.py
backend/app/: config.py  main.py
backend/app/api/: chat.py  config.py  dictionary.py  documents.py  health.py  pipeline.py
backend/app/core/: db.py  embedding.py  llm.py  volc_vision.py
backend/app/services/: auditor.py  desensitizer.py  image_extractor.py  parser.py  retriever.py
backend/pipelines/: chunk_all.py  index_chunks.py  parse_docs.py
data/: desensitize_rules.json  query_synonyms.txt  terms_dict.txt
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx
scripts/: download_models.py  setup.sh  setup_mac.sh
