[project]
name = "rag-agent"
version = "1.0.0"
description = "Self-hosted RAG knowledge base agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymilvus>=2.5.0",
    "zhipuai>=2.0.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "kreuzberg>=1.0.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.5.0",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "PyPDF2",
    "Pillow",
    "xlrd",
    "fitz",
    "markdown",
]
